--- a/menuexplorerapp/index.html
+++ b/menuexplorerapp/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Express HTML</title>
+    <title>Menu explorer</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
