read services path from config - adding dotenv module

--- a/menuexplorerapp/index.html
+++ b/menuexplorerapp/index.html
@@ -46,6 +46,7 @@
                             <ol class="carousel-indicators">
                             </ol>
                             <div class="carousel-inner">
+                                <div class="item active"><img src="/assets/img/preview.png" alt="Slide 1" /></div>
                             </div>
                             <a href="#carousel" class="left carousel-control" data-slide="prev">
                                 <span class="glyphicon glyphicon-chevron-left"></span>
