adding loader while ocr is working

--- a/menuexplorerapp/index.html
+++ b/menuexplorerapp/index.html
@@ -20,7 +20,9 @@
         </nav>
 
     </div>
+  
     <div class='container'>
+       
         <div class='row'>
             <div class='col-sm-12'>
                 <div class='form-group'>
@@ -34,6 +36,7 @@
                         </span>
                         <input type='text' class='form-control' readonly>
                     </div>
+                    <div class="loader hidden"></div>
                     <canvas id='canvas'></canvas>
                 </div>
 
